@@ -2,6 +2,13 @@
 
 	Patch from Jani Monoses <jani@ubuntu.com>
 
+	* src/main.c
+		- Kill usage of GnomeClient (#436832)
+
+2007-07-26  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Jani Monoses <jani@ubuntu.com>
+
 	* src/applet.c
 	  src/other-network-dialog.c
 	  src/menu-items.c
